<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/searchBar_Header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <AutoCompleteTextView
            android:id="@+id/item_searchbar_textView"
            android:layout_width="290sp"
            android:layout_height="50sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:dropDownHeight="120sp"
            android:hint="@string/add_item_hint"/>

        <Button
            android:id="@+id/add_item_btn"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5sp"
            android:layout_marginEnd="5sp"
            android:text="@string/add_item"
            android:onClick="onAddItem"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonPanel_Footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/remove_all_items_btn"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="5sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/remove_all_items"
            android:textSize="10sp"
            android:onClick="onRemoveAllItemsBtnClick"/>

        <Button
            android:id="@+id/remove_marked_items_btn"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="5sp"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/remove_all_items_btn"
            android:text="@string/remove_marked_items"
            android:textSize="10sp"
            android:onClick="onRemoveMarkedItemsBtnClick"/>

        <Button
            android:id="@+id/hide_keyboard_btn"
            android:layout_width="80sp"
            android:layout_height="50sp"
            android:layout_marginStart="5sp"
            android:layout_marginBottom="5sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/hide_keyboard"
            android:textSize="10sp"
            android:onClick="onHideKeyboardBtnClick"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/shoppinglist_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchBar_Header"
        android:layout_above="@id/buttonPanel_Footer"
        android:layout_margin="10sp"
        android:background="@drawable/border"/>
</RelativeLayout>